<resources>
    <string name="app_name">EDPNGO</string>
    <string name="profile">Profile</string>
    <string name="volunteer">Volunteer</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="edp_ngo">EDP NGO</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donate">DONATE</string>
    <string name="project">PROJECT</string>
    <string name="gallery">GALLERY</string>
    <string name="our_blogs">OUR BLOGS</string>
    <string name="thank_you_for_making_a_donation">Thank you for making a donation to EDP NGO. Please use the button below to pay your desired giving amount.</string>
    <string name="enroll_now">Enroll Now</string>
    <string name="home_health_aide">HOME HEALTH AIDE</string>
    <string name="computer_courses">COMPUTER COURSES</string>
    <string name="esl_english">ESL (ENGLISH AS SECOND LANGUAGE)</string>
    <string name="fashion_design_text">FASHION DESIGN</string>
    <string name="free_immigration_lawyer">FREE IMMIGRATION LAWYER</string>
    <string name="festival_program">FESTIVAL PROGRAM</string>
    <string name="hello_post_text">Hello Everyone, Good News for USA citizens. Empowering Development Project Inc. promotes cooking training opportunity for cook lovers named Culinary Training Workshop. So why late? Join our workshop. Hope you will enjoy our session.</string>
    <string name="join_us">Join Us</string>
    <string name="about_text">The organization is a non-political, non-profitable, self-reliant, publicly registered that duly organized and managed by a dialect expatriate living in New York. Integrity in the service is our motto with the inclusion of social welfare activities, uniting the members of the organization and establishing good relations between trained mem-bers and the overall welfare of the people.</string>
    <string name="mr_xxx">Mr. XXX</string>
    <string name="email_text">winkytech@gmail.com</string>
    <string name="english_desc">What is an ESL Program? English as a Second Language (ESL), also called English as a Foreign Language (EFL), is an English language study prograrn for nonnative speakers. Most ESL programs have brief classes so that students can concentrate individual attention from their teachers. The goal of an ESL program is to improve the students English level. ESL classes teach different language skills, depending on students. English capabilities, interests, and needs. All programs teach the following:Conversational English, Grammar, Reading, Listening, Writing Comprehension and vocabulary.</string>
    <string name="computer_desc">Keyboarding
                                Microsoft Word
                                Microsoft Excel
                                Power Point
                                In USA
    </string>

    <string name="health_desc">They must assist the patients in the activities of daily living and provide basic routine care; such as assistance in eating, bathing, brushing teeth, giving medicine, dress changing, checking a patients temperature and pulse rate and helping with artificial limbs or walking aids.</string>
    <string name="fashion_desc">They must assist the patients in the activities of daily living and provide basic routine care; such as assistance in eating, bathing, brushing teeth, giving medicine, dress changing, checking a patients temperature and pulse rate and helping with artificial limbs or walking aids.</string>
    <string name="law_desc">If anybody wants to visit United States for study, work or business purposes, needs proper documentations otherwise he/she will have to face detention, deportation proceedings through court. Immigration law is very complex here in USA. EPD is an organization can be helped them to solve the immigration related problems.</string>
    <string name="festival_desc">A festival is an event generally celebrated by a community and centering some characteristic aspect of that community and its religion or cultures. It is often marked as a local or national holiday, fair or eid.</string>
    <string name="view_details">View Details</string>
    <string name="project_desc">Today was ranked the number one NGO in the world by the Geneva-based NGO Advisor, an independent media organisation committed to highlighting innovation, impact and governance in the non-profit sector. EDP clinched the top spot as part of the 2016 Top 500 NGOs World rankings</string>
    <string name="volunteer_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, et placeat ipsam, officiis fugiat doloremque ducimus tempore aliquid nihil soluta, quia similique veritatis! Quidem, repellendus exit placeat ipsam, officiis fugiat doloremque ducimus tempore aliquid nihil soluta, quia similique veritatis.</string>
    <string name="lorem_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="our_vision">Our Vision</string>
    <string name="our_mission">Our Mission</string>
    <string name="mission_desc">The power of faith or longing takes people to the edge of the road to fulfill their dreams. People who are able to make themselves as self-reliant on their own power will get the avenue of improving their own capacity. Self-con¬fidence is power. This organization\'s expectation is to make self-dependant country for people as the self-reliance, honesty, mutual respect and trust, transparency and accountability are the main motive and force of the organiza¬tion.</string>

    <string name="number">01757000000</string>
    <string name="president_email">president@edpngo.org</string>
    <string name="director_email">director@edpngo.org</string>
    <string name="founder_email">ambiaaceedu18@gmail.com</string>
    <string name="address_president">58 Church avenue Apt # 2E, Brooklyn, New York. 11218</string>
    <string name="address_director">58 Church avenue Apt # 2E, Brooklyn, New York. 11218</string>
    <string name="address_founder">58 Church avenue Apt # 2E, Brooklyn, New York. 11218</string>
    <string name="president_desc">We shall overcome If this can be motto of a human being then we can really overcome one day. That day is not far from away. We will overcome Unemployment, we will overcome our Frustration, we will overcome Jobless life. Today we get together to achieve and develop ourselves with our own power. Empowering Development Project working for this city since 2015. To whom we are working for they are very close to us and also our relatives and kith and kin. Our objective is to provide them a wonderful day for each and every day. If our daily life is become beautiful then our family will become beautiful, if our family become beautiful then our life will be wonderful. Everyone in our society is talented but every person is talented by his or own side. Just need to wake them up. If it\'s possible then no person will be the burden for the family, no person will be jobless and no frustration can be affected him/her. Every person has the ability and hidden power to do something different, by using this hidden power we can make different and developed society and we are going toward to do this. We are at this moment finally and it\'s not so easy for us. We can do better for our future, we need your appreciation cordially. MS Alam Chairman Empowering Development Project</string>
    <string name="director_desc">The person who wants to make his or her own decision for career and want to dedicate his or her power into passion of own is called empowered human. Empowering Development Project Inc wants to help those people who are thinking that they could do something and they have the things inside what they don\'t know. A little amount of motivation and dedication can change a person\'s life from this to that.

Lot of peoples are making of laugh at you but you don\'t know what to happen next. Just your minimum efforts and your patience will take you a long way. So just try to know yourself that what you are. Believe yourself that you can do it.

Empowering Development Project Inc first time going to fulfill some basic step like ESL Training (English as a Second Language), Tailor Training, Basic Computer Training, Cooking Training. Later EDP is going take some step to train people in an advance way such as Advanced Computer Training, Advanced English Grammar Using, Home Aide Training, Advanced Communication Skill Development and so on. Also EDP is going help people with Immigration Consultation for new immigrants.

Above skills development are very necessary and common process to survive in this modern era also useful to survive in USA which will be very helpful and immigrants will be aware of their intellectual power what they are needed. We all are appreciate your positive remarks and thankful attending this day cordially.

Ashikur Rahman Ashik
Director
Empowering Development Project.</string>
    <string name="founder_desc">Self-Confidence a Self-Consciousness are very close to each other and they are living inside a persons subconscious mind. Every human beings is born with his or her own capability. No one knows how powerful these powers are. By using these capabilities a person can do anything what they actually want to do. For example a born blind person can be greatest programmer by gaining computer knowledge and get a degree of computer science, on the other hand a healthy person as well full capable person can not be just a good person. The difference is happening just use of their own capability. But why this is happening here? It is happening because one person being a blind but his or her self-confidence or self-consciousness is making him or her to do something different and think different, on the other hand a full healthy person not trying to do something because he or she is thinking that he or she has everything. Empowering Development Project (EDP) is just focusing of person\'s own capability that yes you will do and you can do. Making trained people is one of the objective of EDP. Free Computer Training, Tailoring, English Speaking course will be very helpful project for the people who are really want to gain something in their life. In this modern era these activities is affecting much for a person to be a part of our modern society.For this day we have been working so hard and waiting a long time. Now we are soglad to be here also we want to do something for people in the future with other new activities that is all we want and we want your appreciation. Ambia Begum
                        Founder and Secretary
Empowering Development Project.</string>
    <string name="empowering_development_project_inc">Empowering Development Project Inc.</string>
    <string name="mr_saddam_hossen">Mr.Saddam Hossen</string>
    <string name="scroll_phone_text">Scroll to find stories and project that inspire you</string>
    <string name="donation_walkthough_text">Thank you for making a donation to EDP NGO. Please use the button below to pay your desired giving amount.</string>
    <string name="helping_text">Support people and causes you care about.</string>
</resources>