<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navProfile"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"
        />

    <item
        android:id="@+id/navVolunteer"
        android:title="@string/volunteer"
        android:icon="@drawable/volunteer_icon"
        />

    <item
        android:id="@+id/navAbout"
        android:title="@string/about_us"
        android:icon="@drawable/about_icon"
        />

    <item
        android:id="@+id/navContact"
        android:title="@string/contact_us"
        android:icon="@drawable/contact_icon"
        />

    <item
        android:id="@+id/navLogout"
        android:title="Logout"
        android:icon="@drawable/logout_icon"
        />
</menu>